fix: fix alignment problem regarding log-out button

--- a/normal-analytics-frontend/src/components/AllData/AllData.css
+++ b/normal-analytics-frontend/src/components/AllData/AllData.css
@@ -1,82 +1,29 @@
-/* attendance */
 
-.nav-bar {
-    width: 100vw;
-    height: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    flex-direction: row;
-    font-size: 10rem;
-    background-color: #2FB0C4;
-}
-
-.nav-item {
-    font-size: 16rem;
-    color: black;
-    text-transform: lowercase;
-    text-decoration: underline;
-    letter-spacing: 1rem;
-    background: none;
-    border: 2rem ;
-    border-radius: 5rem;
-    margin: 0 20rem;
-}
-
-.nav-item:hover {
-    opacity: .6;
-    cursor: pointer;
-}
-
-.left {
-    margin-right: auto;
-}
-
+/* dropdown */
 .dropdown {
     position: relative;
     display: inline-block;
-    
 }
 
-.dropdown-content {
+.dropdown-item {
     display: none;
     position: absolute;
-    margin-left: 33%;
     text-align: center;
     background-color: #f9f9f9;
-    width: 10vw;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
     z-index: 1;
+    padding: 10rem;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-title {
+    margin-bottom: 10rem;
+}
+
+.dropdown:hover .dropdown-item {
     display: block;
 }
 
-.dropdown-content:hover {
-    background-color: #058EA3;
+.dropdown-item:hover {
     cursor: pointer;
+    opacity: .9;
 }
-
-.dashboard-content {
-    width: 100vw;
-    height: 90vh;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.section {
-    width: 42.5vw;
-    height: 45vh;
-    background-color: rgb(228, 243, 248);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-
-
-
